CheerpBackend: Unit tests for pointer analyzer

--- a/unittests/CMakeLists.txt
+++ b/unittests/CMakeLists.txt
@@ -14,6 +14,7 @@ endfunction()
 add_subdirectory(ADT)
 add_subdirectory(Analysis)
 add_subdirectory(Bitcode)
+add_subdirectory(Cheerp)
 add_subdirectory(CodeGen)
 add_subdirectory(DebugInfo)
 add_subdirectory(ExecutionEngine)
