Fix cheerp PointerAnalyzer test

--- a/unittests/Cheerp/CMakeLists.txt
+++ b/unittests/Cheerp/CMakeLists.txt
@@ -8,4 +8,4 @@ add_llvm_unittest(CheerpTests
   CheerpPointerAnalyzerTest.cpp
   )
 
-configure_file( test1.ll ${CMAKE_CURRENT_BINARY_DIR}/test1.ll COPYONLY )
+configure_file( test1.ll ${CMAKE_BINARY_DIR}/test/test1.ll COPYONLY )
